Prevent gap in menu when no javascript

--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,7 @@ ul.menu-dropdown {
 }
 .no-jscript .menu-dropdown ul {
   padding: 0;
+  margin: 0;
   display: none;
 }
 .menu-dropdown a {
